# fbkl-rust

./: .env.template  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .graphqlrc.yml  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Cargo.toml  README.md  backup.jsonl  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
db/: Cargo.toml  diesel.toml
db/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
db/migrations/2022-08-10-151311_create_user_auth_tables/: down.sql  up.sql
db/src/: lib.rs  models.rs  queries.rs  schema.rs
db/src/models/: user_model.rs  user_token_model.rs
db/src/queries/: user_queries.rs  user_token_queries.rs
entity/: Cargo.toml  README.md
entity/src/: lib.rs
entity/src/entities/: auction.rs  auction_bid.rs  contract.rs  deadline.rs  deadline_config_rule.rs  draft_pick.rs  draft_pick_draft_pick_option.rs  draft_pick_option.rs  draft_pick_option_amendment.rs  job_run.rs  league.rs  league_player.rs  mod.rs  player.rs  position.rs  prelude.rs  real_team.rs  rookie_draft_selection.rs  roster.rs  roster_update.rs  sessions.rs  team.rs  team_trade.rs  team_update.rs  team_update_contract.rs  team_user.rs  trade.rs  trade_action.rs  trade_asset.rs  transaction.rs  user.rs  user_registration.rs
entity/src/entities/contract/: annual_contract_advancement.rs  contract_entity.rs  drop_contract.rs  expire_contract.rs  free_agent_extension.rs  mod.rs  rookie_activation.rs  rookie_development_international.rs  rookie_draft.rs  trade_contract.rs  veteran_auction_contract.rs  veteran_contract_signing.rs
entity/src/entities/transaction/: auction_transaction.rs  keeper_deadline_transaction.rs  mod.rs  rookie_draft_selection_transaction.rs  trade_transaction.rs  transaction_entity.rs
entity/src/queries/: auction_queries.rs  contract_queries.rs  deadline_config_rule_queries.rs  deadline_queries.rs  draft_pick_queries.rs  job_run_queries.rs  league_player_queries.rs  league_queries.rs  mod.rs  player_queries.rs  position_queries.rs  real_team_queries.rs  rookie_draft_selection_queries.rs  team_queries.rs  team_update_queries.rs  team_user_queries.rs  trade_action_queries.rs  trade_asset_queries.rs  trade_queries.rs  transaction_queries.rs  user_queries.rs  user_registration_queries.rs
entity/src/queries/team_update_queries/: auction_team_update.rs  basic.rs  contract_update_player_data.rs  insert_from_trade.rs  keeper_team_update.rs  mod.rs
jobs/: Cargo.toml
jobs/src/: deadline_processor.rs  lib.rs
lambdas/: Cargo.toml
lambdas/src/: lib.rs
logic/: CLAUDE.md  Cargo.toml
logic/src/: annual_team_contract_advancement.rs  keeper_deadline.rs  lib.rs
logic/src/annual_contract_advancement/: advance_league_contracts.rs  create_team_contracts_for_annual_advancement.rs  mod.rs
logic/src/auction/: fa_auction.rs  mod.rs  preseason_veteran_auction.rs  sign_auction_contract_to_team.rs  start_new_auction.rs  veteran_auction.rs
logic/src/deadline/: mod.rs
logic/src/deadline/keeper_deadline/: mod.rs  process_keeper_deadline.rs
logic/src/deadline/roster_lock/: validate_rosters.rs
logic/src/deadline_config/: configuration.rs  generation.rs  mod.rs  validation.rs
logic/src/deadline_processing/: mod.rs  processor.rs
logic/src/deadline_processing/keeper_deadline/: process_keeper_deadline.rs  save_keeper_team_update.rs
logic/src/deadline_processing/roster_lock/: lock_rosters.rs  mod.rs  (+1 more)
logic/src/draft_picks/: future_draft_picks.rs  mod.rs
logic/src/drop_contract/: drop_contract_from_team.rs  drop_contract_team_update.rs  mod.rs
logic/src/ir/: activate_contract_from_ir.rs  ir_team_update.rs  mod.rs  move_contract_to_ir.rs
logic/src/keeper_deadline/: process_keeper_deadline.rs  save_keeper_team_update.rs
logic/src/rookie_development_activation/: activate_rookie.rs  mod.rs  rookie_activation_team_update.rs
logic/src/rookie_development_international/: mod.rs  move_rd_contract_to_international.rs  move_rdi_contract_from_international.rs  rdi_team_update.rs
logic/src/roster/: mod.rs  salary_calculation.rs
logic/src/team_ownership/: mod.rs  team_user_access.rs
logic/src/trade/: accept_trade.rs  create_trade_team_update.rs  external_trade_invalidation.rs  mod.rs  process_trade.rs  process_trade_assets.rs  propose_trade.rs  validate_trade_assets.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220916_131200_create_session_table.rs  m20220916_131201_create_auto_updated_at_fn.rs  m20220916_131202_create_user_table.rs  m20220916_152433_create_user_registration.rs  m20220922_012310_create_real_world_tables.rs  m20220924_004529_create_league_tables.rs  m20220930_011056_seed_positions.rs  m20220930_011056_seed_real_teams_positions.rs  m20221023_002153_create_roster_tables.rs  m20221023_002183_create_asset_tables.rs  m20221023_002183_create_contract.rs  m20221023_002184_create_draft_pick.rs  m20221023_002185_create_draft_pick_option.rs  m20221029_152534_create_team_update_contract.rs  m20221111_002318_create_rookie_draft.rs  m20221112_132607_create_auction_tables.rs  m20221112_151717_create_trade_tables.rs  m20221117_235325_create_transaction.rs  m20230217_011454_create_team_update.rs  m20230217_011465_create_team_update_contract.rs  m20230811_152800_create_draft_pick_option_amendment.rs  m20230811_160328_add_draft_pick_option_amendment_fk_to_trade_asset.rs  m20250701_022848_create_deadline_config_rule_table.rs  m20260609_000001_create_job_run.rs  m20260722_000001_collapse_transaction_fk_columns.rs  main.rs
server/: Cargo.toml  README.md
server/migrations/2022-08-10-151311_create_user_auth_tables/: up.sql
server/src/: error.rs  graphql.rs  handlers.rs  lib.rs  main.rs  server.rs  session.rs  setup_actix_server.rs
server/src/graphql/: contract.rs  league.rs  player.rs  team.rs  user.rs
server/src/handlers/: application.rs  application_handlers.rs  graphql.rs  graphql_handlers.rs  league_handlers.rs  login.rs  login_handlers.rs  public.rs  user_registration.rs  user_registration_axum.rs  user_registration_handlers.rs
server/src/queries/: user_queries.rs
(+217 files in other folders)
