[workspace]

members = [
  "auth",
  "constants",
  "entity",
  "graphql-generation",
  "jobs",
  "lambdas",
  "logic",
  "migration",
  "server",
  "transaction-processor"
]

# Private submodule (git@github.com:kaibyao/fbkl-rust-import-data). Excluded so
# workspace builds without the submodule checked out (e.g. CI/deploy). No other
# crate depends on it; build it standalone via `cd import-data && cargo run`.
exclude = ["import-data"]

resolver = "2"
