[workspace]

members = [
  "auth",
  "constants",
  "entity",
  "graphql-generation",
  "jobs",
  "lambdas",
  "logic",
  "migration",
  "server",
  "transaction-processor"
]

# Private submodule (git@github.com:kaibyao/fbkl-rust-import-data). Excluded so
# workspace builds without the submodule checked out (e.g. CI/deploy). No other
# crate depends on it; build it standalone via `cd import-data && cargo run`.
exclude = ["import-data"]

resolver = "2"

# Member crates opt in via `[lints] workspace = true`. Pedantic/nursery stay at
# warn: lefthook blocks commits on warnings via `cargo clippy -- -D warnings`.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic lints with poor signal-to-noise for this codebase.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
