[package]
name = "fbkl-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.21", features = ["serde"] }
diesel = { version = "2.0.0-rc.1", features = ["chrono", "postgres", "r2d2"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
sea-orm = { version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.143", features = ["derive"] }

[target.aarch64-apple-darwin]
rustflags = '-L /opt/homebrew/opt/libpq/lib -L /opt/homebrew/lib'
