[package]
edition = "2021"
name = "fbkl-entity"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {git = "https://github.com/kaibyao/async-graphql"}
color-eyre = "0.6.2"
sea-orm = {version = "^0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
serde = "1.0.144"
