[package]
name = "fbkl-jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
color-eyre = "0.6.2"
fbkl-entity = {path = "../entity"}
fbkl-transaction-processor = {path = "../transaction-processor"}
tokio = {version = "1.52.3", features = ["macros", "rt", "time"]}
tracing = "0.1.36"
