[package]
edition = "2024"
name = "fbkl-lambdas"
version = "0.1.0"

[lib]
name = "fbkl_lambdas"
path = "src/lib.rs"

[dependencies]
fbkl-entity = {path = "../entity"}
fbkl-jobs = {path = "../jobs"}
fbkl-server = {path = "../server"}
lambda_http = "0.14"
lambda_runtime = "0.14"
serde_json = "1.0.150"
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.44"
