[package]
name = "fbkl-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
chrono = "0.4"
fbkl-constants = {path = "../constants"}
fbkl-entity = {path = "../entity"}
multimap = "0.9.0"
once_cell = "1.18.0"
tracing = "0.1.36"
