[package]
edition = "2021"
name = "fbkl-migration"
publish = false
version = "0.1.0"

[lib]
name = "fbkl_migration"
path = "src/lib.rs"

[dependencies]
async-sea-orm-session = "0.1.2"
async-std = {version = "^1", features = ["attributes", "tokio1"]}
fbkl-entity = {path = "../entity"}

[dependencies.sea-orm-migration]
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
version = "^0.9.0"
