[package]
edition = "2021"
name = "server"
version = "0.1.0"

[lib]
name = "fbkl_server"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {git = "https://github.com/kaibyao/async-graphql", features = ["log", "tracing"]}
async-graphql-axum = {git = "https://github.com/kaibyao/async-graphql"}
async-sea-orm-session = {version = "0.1.2", default-features = false}
axum = {version = "0.6.0-rc.2"}
axum-macros = "0.2.3"
axum-sessions = {git = "https://github.com/kaibyao/axum-sessions", rev = "9e5ce92717c17edf3ecef95180779ec0b106482b"}
color-eyre = "0.6.2"
dotenv = "0.15.0"
fbkl-auth = {path = "../auth"}
fbkl-entity = {path = "../entity"}
serde = {version = "1.0.143", features = ["derive"]}
tokio = {version = "1.20.1", features = ["full"]}
tower-cookies = "0.7.0"
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter", "fmt"]}
