[package]
edition = "2021"
name = "fbkl-server"
version = "0.1.0"

[lib]
name = "fbkl_server"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.7"
async-graphql-axum = "7.0.7"
axum = {version = "0.7.5"}
axum-macros = "0.4.1"
color-eyre = "0.6.3"
dotenv = "0.15.0"
fbkl-auth = {path = "../auth"}
fbkl-entity = {path = "../entity"}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.118"
time = "0.3.36"
tokio = {version = "1.38.0", features = ["full"]}
tower-cookies = "0.10.0"
tower-sessions = {version = "0.12.2", features = ["private"]}
tower-sessions-sqlx-store = {version = "0.12.0", features = ["postgres"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "fmt"]}
