[package]
edition = "2024"
name = "fbkl-server"
version = "0.1.0"

[lib]
name = "fbkl_server"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = {version = "0.8.9"}
axum-macros = "0.5.1"
color-eyre = "0.6.5"
dotenv = "0.15.0"
fbkl-auth = {path = "../auth"}
fbkl-entity = {path = "../entity"}
fbkl-jobs = {path = "../jobs"}
fbkl-logic = {path = "../logic"}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
sha2 = "0.10.9"
time = "0.3.47"
tokio = {version = "1.52.3", features = ["full"]}
tower-cookies = "0.11.0"
tower-sessions = {version = "0.14.0", features = ["private"]}
tower-sessions-sqlx-store = {version = "0.15.0", features = ["postgres"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter", "fmt"]}
